--- a/src/SConscript
+++ b/src/SConscript
@@ -1,6 +1,6 @@
 lib_files = Split('riak.c pb_messages.c pb_transport.c riak.pb-c.c riak_kv.pb-c.c')
 Library('riak_c_client', lib_files)
-Program('main.c', LIBS=['riak_c_client', 'pthread', 'protobuf', 'protobuf-c'], LIBPATH='.')
+Program('main.c', LIBS=['riak_c_client', 'iconv', 'pthread', 'protobuf', 'protobuf-c'], LIBPATH='.')
 
 env = Environment()
 conf = Configure(env)
@@ -14,6 +14,10 @@ if not conf.CheckLib('protobuf'):
 
 if not conf.CheckLib('protobuf-c'):
   print 'Did not find protobuf-c lib, exiting!'
+  Exit(1)
+
+if not conf.CheckLib('iconv'):
+  print 'Did not find iconv lib, exiting!'
   Exit(1)
 
 
