--- a/src/SConscript
+++ b/src/SConscript
@@ -1,4 +1,4 @@
-env = Environment(CCFLAGS = '-Wall')
+env = Environment(CCFLAGS = '-g -Wall')
 lib_files = Split('riak.c pb_messages.c pb_transport.c riak.pb-c.c riak_kv.pb-c.c')
 env.Library('riak_c_client', lib_files)
 env.Program('main.c', LIBS=['riak_c_client', 'iconv', 'pthread', 'protobuf', 'protobuf-c'], LIBPATH='.')
