--- a/src/SConscript
+++ b/src/SConscript
@@ -1,5 +1,5 @@
 env = Environment(CCFLAGS = '-g -Wall')
-lib_files = Split('riak.c riak_utils.c pb_messages.c pb_transport.c riak.pb-c.c riak_kv.pb-c.c')
+lib_files = Split('riak.c riak_utils.c riak_pb_proto.c pb_messages.c pb_transport.c riak.pb-c.c riak_kv.pb-c.c')
 env.Library('riak_c_client', lib_files)
 env.Program('main.c', LIBS=['riak_c_client', 'iconv', 'pthread', 'protobuf', 'protobuf-c', 'curl'], LIBPATH='.')
 
@@ -25,6 +25,9 @@ if not conf.CheckLib('curl'):
   print 'Did not find curl lib, exiting!'
   Exit(1)
 
+if not conf.CheckLib('libevent'):
+  print 'Did not find libevent, exiting!'
+  Exit(1)
 
 
 env = conf.Finish()
