--- a/src/SConscript
+++ b/src/SConscript
@@ -29,7 +29,13 @@ riak_search_pb = env.Protoc(
     PROTOCPROTOPATH=['.','build/proto'],
     PROTOCOUTDIR = '.', # defaults to same directory as .proto
 )
-lib_files = [riak_pb[0], riak_kv_pb[0], riak_search_pb[0], Split('riak.c riak_utils.c riak_binary.c riak_context.c riak_event.c riak_pb_message.c riak_log.c riak_error.c riak_network.c riak_object.c riak_call_backs.c')]
+riak_yokozuna_pb = env.Protoc(
+    [],
+    "proto/riak_yokozuna.proto",
+    PROTOCPROTOPATH=['.','build/proto'],
+    PROTOCOUTDIR = '.', # defaults to same directory as .proto
+)
+lib_files = [riak_pb[0], riak_kv_pb[0], riak_search_pb[0], riak_yokozuna_pb[0], Split('riak.c riak_utils.c riak_binary.c riak_context.c riak_event.c riak_pb_message.c riak_log.c riak_error.c riak_network.c riak_object.c riak_call_backs.c')]
 
 env.Library('riak_c_client', lib_files)
 env.Program('riak_c_client','main.c', LIBS=['riak_c_client', 'event_core', 'event_extra', 'iconv', 'log4c', 'pthread', 'protobuf', 'protobuf-c'])
