--- a/test/Makefile
+++ b/test/Makefile
@@ -1,5 +1,11 @@
 ## Note: In order to run this, you must have the commercial version
 ## of QuickCheck http://www.quviq.com/index.html
 eqc:
-	erlc -DTEST -DEQC eqc_tests.erl
-	erl -noshell -pa ebin -eval "eunit:test(eqc_tests, [verbose])" -s init stop
+	erlc -DTEST -DEQC eqc_test_utils.erl
+	erl -noshell -pa ebin -eval "eqc_test_utils:test_all()" -s init stop
+	erl -noshell -pa ebin -eval "eqc_test_utils:generate_stubs()" -s init stop
+
+clean:
+	rm *.beam
+	rm *.hrl
+
