pointer fun, made a riak_context** from Erlang
hacked apart riak_error, the static list of error messages
didn't agree with eqc_c... Don't merge that change in anywhere
else.

--- a/test/Makefile
+++ b/test/Makefile
@@ -3,11 +3,15 @@
 
 test_utils:
 	erlc -DTEST -DEQC eqc_test_utils.erl
-	erlc -DTEST -DEQC eqc_tests.erl
 	erl -noshell -pa ebin -eval "eqc_test_utils:test_all()" -s init stop
+	erlc -DTEST -DEQC eqc_tests.erl
 	erl -noshell -pa ebin -eval "eqc_tests:test_all()" -s init stop
 
 all: gen_stubs
+
+dev:
+	erlc -DTEST -DEQC eqc_tests.erl
+	erl -noshell -pa ebin -eval "eqc_tests:test_all()" -s init stop
 
 
 clean:
