--- a/src/SConscript
+++ b/src/SConscript
@@ -42,7 +42,7 @@ riak_yokozuna_pb = env.Protoc(
 lib_files = [riak_pb[0], riak_kv_pb[0], riak_search_pb[0], riak_yokozuna_pb[0], Split('riak.c riak_utils.c riak_binary.c riak_context.c riak_event.c riak_messages.c riak_log.c riak_error.c riak_network.c riak_object.c riak_call_backs.c riak_command.c')]
 
 env.Library('riak_c_client', lib_files)
-env.Program('riak_c_client','main.c', LIBS=['riak_c_client', 'event_core', 'event_extra', 'iconv', 'log4c', 'pthread', 'protobuf', 'protobuf-c'])
+env.Program('riak_c_client','main.c', LIBS=['riak_c_client', 'event_core', 'event_extra', 'log4c', 'pthread', 'protobuf', 'protobuf-c'])
 
 
 conf = Configure(env)
@@ -58,9 +58,9 @@ if not conf.CheckLib('protobuf-c'):
   print 'Did not find protobuf-c lib, exiting!'
   Exit(1)
 
-if not conf.CheckLib('iconv'):
-  print 'Did not find iconv lib, exiting!'
-  Exit(1)
+#if not conf.CheckLib('iconv'):
+#  print 'Did not find iconv lib, exiting!'
+#  Exit(1)
 
 if not conf.CheckLib('libevent'):
   print 'Did not find libevent, exiting!'
