Add a few more riak_binary tests

--- a/test/cunit/Makefile
+++ b/test/cunit/Makefile
@@ -3,9 +3,10 @@ TARGET	= cunit
 CFLAGS	= -O3
 CFLAGS	+= -g $(shell pkg-config --cflags cunit)
 CFLAGS	+= -g $(shell pkg-config --cflags libevent)
-CFLAGS	+= -g $(shell pkg-config --cflags log4c)
 CFLAGS	+= -g $(shell pkg-config --cflags libprotobuf-c)
-CFLAGS  += -I../../src/include
+CFLAGS	+= -g $(shell pkg-config --cflags protobuf)
+CFLAGS	+= -g $(shell pkg-config --cflags log4c)
+CFLAGS  += -I../../src/include -I../../build/proto -I../../src/internal
 LDFLAGS	= -g -L../../build
 LIBS 	+= $(shell pkg-config --libs cunit)
 LIBS 	+= $(shell pkg-config --libs libevent)
